stye: add css theme variables and basic style

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							</span>
 						</div>
 
-						<!-- Filter buttons - Desktop -->
+						<!-- Filter buttons -->
 						<div class="todo-filters" role="tablist" aria-label="Filter todos">
 							<button
 								class="filter-btn active"
