--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			}
 		</style>
 	</head>
-	<body>
+	<body data-theme="dark">
 		<div class="app-container">
 			<!-- Header -->
 			<header class="header">
@@ -72,11 +72,6 @@
 			<!-- Main content -->
 			<main class="app-main">
 				<div class="todo-container">
-					<ul class="todo-list" id="todo-list" aria-label="Todo items">
-						<!-- Todos will be inserted here by JavaScript -->
-					</ul>
-
-					<!-- Todo list -->
 					<ul class="todo-list" id="todo-list" aria-label="Todo items"></ul>
 
 					<!-- controls -->
@@ -121,6 +116,33 @@
 					</div>
 				</div>
 
+				<div
+					class="mobile-filters"
+					role="tablist"
+					aria-label="Filter todos mobile">
+					<button
+						class="filter-btn active"
+						data-filter="all"
+						role="tab"
+						aria-selected="true">
+						All
+					</button>
+					<button
+						class="filter-btn"
+						data-filter="active"
+						role="tab"
+						aria-selected="false">
+						Active
+					</button>
+					<button
+						class="filter-btn"
+						data-filter="completed"
+						role="tab"
+						aria-selected="false">
+						Completed
+					</button>
+				</div>
+
 				<!-- Drag hint -->
 				<p class="drag-hint" aria-hidden="true">
 					Drag and drop to reorder list
@@ -136,7 +158,10 @@
 						target="_blank"
 						rel="noopener noreferrer"
 						>Frontend Mentor</a
-					>. Coded by <a href="#" id="coder-link">Your Name</a>.
+					>. Coded by
+					<a href="mailto:safyanmuhammad089@gmail.com" id="coder-link"
+						>Abdulbasid Yahaya</a
+					>.
 				</div>
 			</footer>
 		</div>
